--- a/style.css
+++ b/style.css
@@ -119,6 +119,77 @@ form div.container {
   border-radius: 20px;
   z-index: 1;
 }
+div.form-title {
+  font-family: "Abril Fatface", cursive;
+  font-size: 60px;
+  color: #806161;
+  padding: 0px 0px 34px;
+  margin: 0px 0px 8px;
+}
+div.mb-3{
+  width: 100%;
+  margin-bottom: 30px;
+  border: none;
+  
+}
+input, textarea{
+  height: 62px;
+  padding: 0 20px 0 23px;
+  outline: none;
+  border: none;
+  font-weight: 600;
+  box-shadow: 0px 0px 1.2em rgba(0 0 0 / 30%);
+}
+div#emailHelp.form-text {
+  text-align: left;
+}
+textarea {
+  overflow: auto;
+  resize: vertical;
+  text-transform: none;
+  text-shadow: none;
+  padding: 19px 20px 0 23px;
+  min-height: 199px;
+}
+
+input#name{
+  display: block;
+  width: 100%;
+  background: transparent;
+  color: aqua;
+  line-height: 1.2;
+  border-radius: 20px;
+  
+}
+input#email{
+  display: block;
+  width: 100%;
+  background: transparent;
+  color: aqua;
+  line-height: 1.2;
+  border-radius: 20px;
+  
+}
+textarea#message {
+  display: block;
+  width: 100%;
+  background: transparent;
+  line-height: 1.2;
+  border-radius: 20px;
+}
+button.form-btn {
+  background-color: #806161;
+  font-size: 17px;
+  padding: 12px 30px;
+  border-radius: 20px;
+  display: inline-block;
+  color: #fff;
+  text-shadow: 0 0.05rem 0.1rem rgb(0 0 0 / 50%); 
+  border: none;
+}
+button.form-btn:hover {
+  color: gray;
+}
 
 /* Footer */
 footer {
