--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ input, textarea{
   outline: none;
   border: none;
   font-weight: 600;
-  box-shadow: 0px 0px 1.2em rgba(0 0 0 / 30%);
+  box-shadow: 0 0.02rem 0.5rem rgb(0 0 0 / 50%);
 }
 div#emailHelp.form-text {
   text-align: left;
@@ -158,9 +158,9 @@ input#name{
   background: transparent;
   color: aqua;
   line-height: 1.2;
-  border-radius: 20px;
-  
+  border-radius: 20px;  
 }
+
 input#email{
   display: block;
   width: 100%;
@@ -168,7 +168,6 @@ input#email{
   color: aqua;
   line-height: 1.2;
   border-radius: 20px;
-  
 }
 textarea#message {
   display: block;
@@ -189,6 +188,10 @@ button.form-btn {
 }
 button.form-btn:hover {
   color: gray;
+}
+div.container-btn {
+  padding-top: 30px;
+  padding-bottom: 43px;
 }
 
 /* Footer */
