--- a/style.css
+++ b/style.css
@@ -89,9 +89,10 @@ section.hero {
 button{
   background-color: var(--color-secondary);
   font-size: 17px;
-  padding: 13px 27px;
+  padding: 15px 27px;
   border-radius: 12px;
   display: inline-block;
+  border: none;
   color: #fff;
 }
 button:hover {
