--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a.nav-link {
   text-shadow: 0 0.05rem 0.1rem rgb(0 0 0 / 50%);
 }
 a.nav-link:hover {
-  color: gray;
+  color: rgb(94, 91, 91);
 }
 /* Hero Section */
 .hero {
@@ -214,7 +214,7 @@ button.form-btn {
   border: none;
 }
 button.form-btn:hover {
-  color: gray;
+  background-color: var(--color-button-hover);
 }
 div.container-btn {
   padding-top: 30px;
