Major tweaks to the hero title

--- a/style.css
+++ b/style.css
@@ -56,9 +56,10 @@ a.nav-link:hover {
   color: rgb(255, 249, 249);
   text-transform: uppercase;
 }
-.hero h1 {
-  color: #000;
-  font-family: "Roboto", sans-serif;
+.hero-titel {
+  color: #fff;
+  text-shadow: 0 0.10rem 0.3rem rgb(0 0 1 / 50%);
+  font-family: "Poppins", sans-serif;
   position: absolute;
   text-align: start;
   width: 800px;
@@ -66,17 +67,18 @@ a.nav-link:hover {
   top:270px;
   left: 78px;
   font-size: 50px;
-  font-style: normal;
+  font-style: medium;
   font-weight: normal;
   line-height: 50px;
 }
 p.lead {
-  font-weight: norrmal;
+  font-weight: normal;
   font-size: 28px;
   text-align: start;
+
 }
 section {
-  min-height: 100vh;
+  min-height: 30vh;
 }
 section.hero {
   background-color: var(--color-primary);
