Add more color options to info section

--- a/style.css
+++ b/style.css
@@ -122,9 +122,11 @@ img.solar-img {
 }
 p.info {
   font-family: "Poppins", sans-serif;
+  color: var(--color-text);
 }
 p.info2 {
   font-family: "Poppins", sans-serif;
+  color: var(--color-text);
 }
 section.info-section {
   padding: 270px 0;
@@ -143,6 +145,7 @@ h4 {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   padding-bottom: 30px;
+  color: var(--color-out);
 }
 #about.info-section {
   padding: 100px 0;
