Update info text title color

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   --color-in:#C58989;
   --color-text:#f0e2e2;
   --color-info-bg:#4E3434;
-  --color-info-title:#c58989;
+  --color-info-title:#FFAEAE;
   --color-info-text:#c58989;
   --color-contact-form: #ffffffa9;
   --color-button-hover: rgb(181, 116, 237);
