--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-body {
+/*body {
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
   text-align: center;
 }
-/* Classes representing the theme colors */
+ Classes representing the theme colors 
 .theme-light {
   --color-primary: #c87155;
   --color-secondary: #806161;
@@ -33,7 +33,7 @@ body {
   --color-contact-form: #ffffffa9;
   --color-button-hover: rgb(181, 116, 237);
 }
-/* Navigation */
+ Navigation 
 .navbar {
   padding: 1em;
   background-color: var(--color-primary);
@@ -60,7 +60,7 @@ a.nav-link {
 a.nav-link:hover {
   color: rgb(255, 255, 255);
 }
-/* Hero Section */
+ Hero Section 
 .hero {
   padding: 300px 0;
 }
@@ -86,7 +86,7 @@ h3.hero-p {
   line-height: 60px;
 }
 section {
-  min-height: 80vh;
+  min-height: 100vh;
 }
 section.hero {
   background-color: var(--color-primary);
@@ -116,7 +116,7 @@ button:hover {
   background-color: var(--color-button-hover);
 }
 
-/* About Section */
+ About Section 
 img.solar-img {
   max-width: 100%;
   width: 500px;
@@ -161,8 +161,8 @@ h4 {
   float: left;
   padding: 20px;
   box-sizing: border-box;
-}
-/* Contact Section */
+} */
+ /*Contact Section */
 section.contact-section {
   padding: 300px 0;
   background-color: var(--color-contact-bg);
@@ -285,20 +285,30 @@ div.text-center.p-3 {
   font-family: "Poppins", sans-serif;
   color: var(--color-text);
 }
-/* Media Queries */
+
+/* Media Queries 
 @media only screen and (max-width: 768px){
 .navbar{
   padding: 1rem;
 }
 .hero-titel{
   position: absolute;
-  width: 280px;
+  width: 400px;
   height: 85px;
-  font-family: "Roboto",sans-serif;
-  font-style:normal;
   font-weight: 500;
-  font-size: 30px;
-  line-height: 26px;
+  font-size: 37px;
+  line-height: 40px;
+}
+.hero-p{
+width: 280px;
+height: 70px;
+}
+button#switch, a.hero-cta{
+  padding: 3px 20px;
+  font-size: 15px;
+}
+h2{
+
 }
 @media screen and (max-width: 480px) {
   .navbar-toggler{
@@ -315,3 +325,4 @@ div.text-center.p-3 {
 @media screen and (min-width: 580px){
 
 }
+*/
