--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-/*body {
-  margin: 0;
-  padding: 0;
+body {
   font-family: "Poppins", sans-serif;
-  text-align: center;
 }
- Classes representing the theme colors 
+body::before {
+  display: block;
+  content: '';
+  height: 60px;
+}
+/*  Classes representing the theme colors */
 .theme-light {
   --color-primary: #c87155;
   --color-secondary: #806161;
@@ -33,7 +35,7 @@
   --color-contact-form: #ffffffa9;
   --color-button-hover: rgb(181, 116, 237);
 }
- Navigation 
+ /* Navigation 
 .navbar {
   padding: 1em;
   background-color: var(--color-primary);
@@ -88,6 +90,7 @@ h3.hero-p {
 section {
   min-height: 100vh;
 }
+*/
 section.hero {
   background-color: var(--color-primary);
 }
