--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body::before {
   --color-contact-form: #ffffffa9;
   --color-button-hover: rgb(181, 116, 237);
 }
+/* Hero Showcase Section */
 .hero-cta {
   background-color: var(--color-primary);
   font-size: 17px;
@@ -43,12 +44,13 @@ body::before {
   display: inline-block;
   text-decoration: none;
   text-shadow: 0 0.05rem 0.1rem rgb(0 0 0 / 50%);
+  border: none;
 }
 .hero-cta:hover {
-  color: var(--color-button-hover);
+  background-color:#a37777;
 }
 a.hero-cta{
-  color: var(--color-in);
+  color: #fff;
 }
 /* Feature Section */
 a {
@@ -56,7 +58,16 @@ a {
  color: #000000; 
 }
 a:hover{
-  color: rgb(113, 3, 109);
+  color:#000;
+}
+/* Research Section */
+.btn.btn-primary {
+  background-color: var(--color-primary);
+  border: none;
+  padding: 4px 27px;
+}
+a.btn.btn.btn-primary:hover {
+  background-color: #a37777;
 }
  /* About Section */ 
 img.solar-img {
